# astc-encoder-py

./: .gitignore  .gitmodules  LICENSE  Manifest.in  README.md  pyproject.toml  setup.py
.github/workflows/: doc.yml  python-package.yml  release.yml  test.yml
astc_encoder/: __init__.py  __init__.pyi  encoder.py  encoder.pyi  enum.py  pil_codec.py
src/: astcenc_error_metrics.cpp  astcenc_error_metrics.hpp  pybind.cpp
tests/: test_main.py  test_pil_codec.py
