[build-system]
requires = ["setuptools", "wheel", "archspec >= 0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "astc_encoder_py"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
description = "a python wrapper for astc-encoder"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["astc", "texture"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["archspec >= 0.2"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/K0lb3/UnityPy"
"Bug Tracker" = "https://github.com/K0lb3/UnityPy/issues"

[tool.setuptools.dynamic]
version = { attr = "astc_encoder.__version__" }

[tool.cibuildwheel]
build = "*"
skip = ""
test-skip = ""
free-threaded-support = false

archs = ["auto"]
build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = 0

before-all = ""
before-build = ""
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"

musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
musllinux-s390x-image = "musllinux_1_2"
# musllinux-armv7l-image = "musllinux_1_2"


[tool.cibuildwheel.linux]
environment = { "CC" = "gcc", "CXX" = "g++" }

[tool.cibuildwheel.macos]
environment = { "CC" = "gcc", "CXX" = "g++" }

[tool.cibuildwheel.windows]

[tool.cibuildwheel.pyodide]
environment = { "CC" = "gcc", "CXX" = "g++" }
